--- a/template_inis/illuminate/point_light_2.ini
+++ b/template_inis/illuminate/point_light_2.ini
@@ -1,6 +1,6 @@
 [IO]
-    scene = C:\\Users\\conno\\BrownCourses\\fl24\\cs1230\\projects-3-and-4-intersect-and-illuminate-cflickbrown\\scenefiles\\illuminate\\required\\point_light\\point_light_2.json
-    output = C:\\Users\\conno\\BrownCourses\\fl24\\cs1230\\projects-3-and-4-intersect-and-illuminate-cflickbrown\\student_outputs\\illuminate\\required\\point_light_2.png
+    scene = C:\\Users\\conno\\BrownCourses\\fl24\\cs1230\\cs1230-spacce\\scenefiles\\illuminate\\required\\point_light\\point_light_2.json
+    output = C:\\Users\\conno\\BrownCourses\\fl24\\cs1230\\cs1230-spacce\\outputs\\demo_point_light_2.png
 
 [Canvas]
     width = 1024
