--- a/template_inis/intersect/ambient_total.ini
+++ b/template_inis/intersect/ambient_total.ini
@@ -1,6 +1,6 @@
 [IO]
-    scene = C:\\Users\\conno\\BrownCourses\\fl24\\cs1230\\projects-3-and-4-intersect-and-illuminate-cflickbrown\\scenefiles\\intersect\\required\\ambient_total.json
-    output = C:\\Users\\conno\\BrownCourses\\fl24\\cs1230\\projects-3-and-4-intersect-and-illuminate-cflickbrown\\student_outputs\\intersect\\required\\ambient_total.png
+    scene = C:\\Users\\conno\\BrownCourses\\fl24\\cs1230\\cs1230-spacce\\scenefiles\\intersect\\required\\ambient_total.json
+    output = C:\\Users\\conno\\BrownCourses\\fl24\\cs1230\\cs1230-spacce\\outputs\\demo_ambient_total.png
 
 [Canvas]
     width = 1024
@@ -17,3 +17,6 @@
     post-process = false
     acceleration = false
     depthoffield = false
+
+[Settings]
+    maximum-recursive-depth = 1
