--- a/template_inis/intersect/directional_light_1.ini
+++ b/template_inis/intersect/directional_light_1.ini
@@ -1,6 +1,6 @@
 [IO]
-    scene = C:\\Users\\conno\\BrownCourses\\fl24\\cs1230\\projects-3-and-4-intersect-and-illuminate-cflickbrown\\scenefiles\\intersect\\required\\directional_light_1.json
-    output = C:\\Users\\conno\\BrownCourses\\fl24\\cs1230\\projects-3-and-4-intersect-and-illuminate-cflickbrown\\student_outputs\\intersect\\required\\directional_light_1.png
+    scene = C:\\Users\\conno\\BrownCourses\\fl24\\cs1230\\cs1230-spacce\\scenefiles\\intersect\\required\\directional_light_1.json
+    output = C:\\Users\\conno\\BrownCourses\\fl24\\cs1230\\cs1230-spacce\\outputs\\demo_directional_light_1.png
 
 [Canvas]
     width = 1024
@@ -17,3 +17,6 @@
     post-process = false
     acceleration = false
     depthoffield = false
+
+[Settings]
+    maximum-recursive-depth = 4
