Black hole rendering setup
Defining tetrad basis vectors for properly rendering in curved spacetime. Still wrapping my head (and light lol) around this but I'm almost there.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,8 @@ add_executable(${PROJECT_NAME}
 
   src/utils/imagereader.h src/utils/imagereader.cpp
   src/utils/shapes.h
+  src/raytracer/raymarchingparameters.h
+  src/raytracer/blackhole.h src/raytracer/blackhole.cpp
 
 )
 
