--- a/template_inis/intersect/unit_sphere.ini
+++ b/template_inis/intersect/unit_sphere.ini
@@ -1,6 +1,6 @@
 [IO]
-    scene = C:\\Users\\conno\\BrownCourses\\fl24\\cs1230\\projects-3-and-4-intersect-and-illuminate-cflickbrown\\scenefiles\\intersect\\required\\unit_sphere.json
-    output = C:\\Users\\conno\\BrownCourses\\fl24\\cs1230\\projects-3-and-4-intersect-and-illuminate-cflickbrown\\student_outputs\\intersect\\required\\unit_sphere.png
+    scene = C:\\Users\\conno\\BrownCourses\\fl24\\cs1230\\cs1230-spacce\\scenefiles\\intersect\\required\\unit_sphere.json
+    output = C:\\Users\\conno\\BrownCourses\\fl24\\cs1230\\cs1230-spacce\\outputs\\test_unit_sphere.png
 
 [Canvas]
     width = 1024
