--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,7 @@ add_executable(${PROJECT_NAME}
 
   src/utils/imagereader.h src/utils/imagereader.cpp
   src/utils/shapes.h
+  src/utils/perlinnoise.h src/utils/perlinnoise.cpp
 
 )
 
